# FDA_email_classifier

./: DOCUMENTATION.md  Dockerfile  FDA end to end ingest flow.bpmn  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  policy-schema.json
.github/workflows/: policy-pr-diff.yml  policy-pr.yml  yaml-validate.yml
rules/: actions.yaml  email_policy.yaml
src/app/: main.py
src/app/agents/: action.py  escalation.py  policy_refiner.py  triage.py
src/app/utils/: gh_actions.py  message_id_helper.py  policy_edit.py  policy_edits.py  rules.py  tools.py
